--- a/style.css
+++ b/style.css
@@ -129,11 +129,7 @@
   /* display: flex;
   align-items: center;
   justify-content: center; */
-  background-image: linear-gradient(
-      rgba(86, 106, 81, 0.65),
-      rgba(71, 91, 74, 0.85)
-    ),
-    url("images/image-6.jpg");
+  background-image: linear-gradient(rgba(86, 106, 81, 0.65), rgba(71, 91, 74, 0.85)), url("images/image-6.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -186,16 +182,15 @@
 
 .hero-btns-box {
   display: flex;
-  gap: -2.6rem;
+  gap: 2.6rem;
 }
 
 .hero .btn:link,
 .hero .btn:visited {
-  width: 24rem;
-  margin-top: 32px;
+  width: 32rem;
+
   background-color: #f7de94;
-  margin-right: 1rem;
-  margin-left: 1rem;
+  white-space: nowrap;
 }
 
 .hero .btn:hover,
